# adventofcode_2024

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  day_template.txt  justfile  replit.nix
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  lib.rs  main.rs  parsers.rs
