[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
aoc-next = "0.1.0"
counter = "0.6.0"
itertools = "0.13.0"
num = "0.4.3"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
